eval-pipeline/deploy/reviewer-service/reviewer-service.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviewer-service
spec:
  selector:
    app: reviewer-service
  ports:
    - name: http
      port: 80
      targetPort: 8010
