eval-pipeline/deploy/reviewer-service/reviewer-service.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reviewer-service
spec:
  rules:
    - host: reviewer-service.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reviewer-service
                port:
                  number: 8010
